src/objects/sma__MAEventLookup__c.object
<CustomObject>
    <fields>
        <fullName>sma__BaseObjectId__c</fullName>
        <label>Base Object Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sma__LocationSource__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Location Source</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sma__LookupFieldAPI__c</fullName>
        <label>Lookup Field API</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__MAEventBaseObj__c</fullName>
        <label>MapAnything Event Base Object</label>
        <referenceTo>sma__MAEventBaseObj__c</referenceTo>
        <relationshipName>MapAnything_Event_Parents</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sma__ObjectAPI__c</fullName>
        <label>Object API</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__TypeAPI__c</fullName>
        <label>TypeAPI</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__TypeDefaultValue__c</fullName>
        <label>TypeDefaultValue</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>MapAnything Event Lookup</label>
    <listViews>
        <fullName>sma__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>MapAnything  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MapAnything Event Lookups</pluralLabel>
    <recordTypes>
        <fullName>sma__Custom</fullName>
        <active>true</active>
        <label>Custom</label>
    </recordTypes>
    <recordTypes>
        <fullName>sma__Standard</fullName>
        <active>true</active>
        <label>Standard</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>